# usac-cmake

./: .gitignore  CMakeLists.txt  Makefile.simplest  README  license.txt
RunSingleTest/: CMakeLists.txt  RunSingleTest.cpp
data/essential/: example.cfg
data/fundmatrix/: example.cfg  example_unix.cfg
data/fundmatrix/test1/: F.txt  inliers.txt
data/homog/: example.cfg
matlab/: MEX_usac.mexa64  MEX_usac.mexmaci64  ParseCalib.m  README.md  compileMex.m  show_epipolar_lines.m  test_mex_usac.m
matlab/MEX/: MEX_usac.cpp
src/: CMakeLists.txt  RansaacDemo.cpp
src/config/: ConfigParams.cpp  ConfigParams.h
src/estimators/: AggHomogEstimator.h  FundmatrixEstimator.h  HomogEstimator.h  OriginalAggHomogEstimator.h  USAC.h
src/sift/: Makefile  lib_sift.c  lib_sift.h
src/utils/: FundmatrixFunctions.cpp  HomographyFunctions.cpp  HomographyFunctions.h  MathFunctions.cpp  MathFunctions.h
